syntax = "proto3";

option csharp_namespace = "clouddrop";

package users;

import "google/protobuf/wrappers.proto";

service UsersService {
    rpc GetUserById (UserByIdRequest) returns (UserProfileMessage);
    rpc GetProfile (UsersEmptyMessage) returns (UserProfileMessage);
    
    rpc UpdateProfileInfo (UserInfoMessage) returns (UserProfileMessage);
}

message UsersEmptyMessage {}

message UserByIdRequest {
    int32 id = 1;
}

message UserProfileMessage {
    int32 id = 1;
    string email = 2;
    string name = 3;
    UserProfileStorageMessage storage = 4;
    
    string first_name = 5;
    string last_name = 6;
    string country = 7;
    string city = 8;
}


message UserProfileStorageMessage {
    int32 id = 1;
    int64 storage_used = 2;
    google.protobuf.Int64Value storage_quote = 3;
}

message UserInfoMessage {
    google.protobuf.StringValue first_name = 1;
    google.protobuf.StringValue last_name = 2;
    google.protobuf.StringValue country = 3;
    google.protobuf.StringValue city = 4;
}